2002-05-15  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (md_begin): Fix .reginfo and .MIPS.option section
	alignment for NewABI. Let n32 use .reginfo. Remove useless casts.
	(mips_elf_final_processing): Let n32 use .reginfo.

2002-05-15  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (append_insn): Fix too small range of variable.

2002-05-14  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-arm.c (arm_cleanup): Remove redundant call to
	listing_prev_line().

2002-05-13  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-arm.c (md_assemble): Remove redundant call to
	listing_prev().

	* dwarf2dbg.c (dwarf2_emit_insn): Do not reset
	loc_directive_seen.

	* stabs.c (s_stab_generic): Fix grammatical error in warning
	message.

2002-05-13  Alan Modra  <amodra@bigpond.net.au>

	* write.c (subsegs_finish): Don't specially align last subseg.

2002-05-11  Nick Clifton  <nickc@cambridge.redhat.com>

	* stabs.c (s_stab_generic): Warn about a description field that is
	too big.

	* config/obj-coff.c: Fix compile time warnings when compiling
	without BFD_ASSEMBLER defined.
	Fix formatting.

	* config/tc-sh.c (md_pcrel_from): Define for use with sh-hms
	target.
	(md_pcrel_from_section): Use md_pcrel_from().

2002-05-11  Bruno Haible  <bruno@clisp.org>

	* dwarf2dbg.c (dwarf2_emit_insn): Use the 'current' struct filled
	by dwarf2_directive_loc, instead of calling dwarf2_where.

2002-05-11  Kazu Hirata  <kazu@cs.umass.edu>

	* config/obj-coff.h: Fix formatting.
	* config/tc-mcore.c: Likewise.
	* config/tc-mn10300.c: Likewise.
	* config/tc-openrisc.c: Likewise.
	* config/tc-or32.c: Likewise.
	* config/tc-pdp11.c: Likewise.
	* config/tc-ppc.c: Likewise.
	* config/tc-ppc.h: Likewise.
	* config/tc-sh64.c: Likewise.
	* config/tc-sh.c: Likewise.
	* config/tc-tic54x.c: Likewise.
	* config/tc-xstormy16.c: Likewise.
	* config/tc-xstormy16.h: Likewise.

2002-05-09  Kazu Hirata  <kazu@cs.umass.edu>
